# apertium-por

./: .gitattributes  AUTHORS  Makefile.am  README  apertium-por.pc.in  apertium-por.por.dix  apertium-por.por.rlx  apertium-por.por.tsx  configure.ac  modes.xml
corpus/: corpus_pt_wp10000.txt
test/: analysis-input.txt  analysis-morph-expected.txt  por-caps-biltrans-expected.txt  por-caps-decase-expected.txt  por-caps-generator-expected.txt  por-caps-input.txt  por-caps-morph-expected.txt  por-caps-pretransfer-expected.txt  por-caps-recase-expected.txt  por-caps-tagger-expected.txt  tests.json
texts/: akatsuki.tagged.txt  akatsuki.txt  akatsuki.vislcg.txt  anfetamina.tagged.txt  bering.tagged.txt  bering.txt  bering.vislcg.txt  beringia.tagged.txt  beringia.txt  beringia.vislcg.txt  catalunha-nuboro.tagged.txt  catalunha.tagged.txt  catalunha.vislcg.txt  cultura.tagged.txt  cultura.txt  cultura.vislcg.txt  deus.vislcg.txt  ermitão.vislcg.txt  myanmar.tagged.txt  myanmar.vislcg.txt  música.tagged.txt  música.txt  música.vislcg.txt  portugal.tagged.txt  portugal.txt  raio.tagged.txt  raio.txt  raio.vislcg.txt  velhinha.vislcg.txt  wikitravel.tagged.txt  wikitravel.vislcg.txt  água.tagged.txt  água.txt  água.vislcg.txt
texts/puupankki/: puupankki.vislcg
